test/corpus/blob.txt
==============================================================================
label + jmp
==============================================================================

_start:
    mov rbp, rsp
    jmp main

-----------------------------------------------------------------------------

(program
  (label)
  (instruction
    (mnemonic)
    (register)
    (register))
  (instruction
    (mnemonic)
    (register)))


==============================================================================
example sections
==============================================================================

            global _start
            section .text

_start:     mov     rax, 1      ; "open"
            syscall

            push rax

exit:
            section .data
path:       db      "/etc/hosts", 0 ; null-terminated

-----------------------------------------------------------------------------

(program)
