test/corpus/instruction.txt
==============================================================================
ret / leave / etc
==============================================================================

ret
leave

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic))
  (instruction
    (mnemonic)))


==============================================================================
pseudo-ops
==============================================================================

.cfi_endproc
.intel_syntax noprefix
.byte	0x7
.long	.LASF1189
.string	"_ZNSt14numeric_limitsIDsE8infinityEv"

-----------------------------------------------------------------------------

(program)


==============================================================================
unary push
==============================================================================

push rbp

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (register)))

==============================================================================
binary mov, two registers
==============================================================================

mov rbp, rsp

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (register)
    (register)))


==============================================================================
binary sub, register + constant
==============================================================================

sub rsp, 16
sub rsp, -16

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (register)
    (integer))
  (instruction
    (mnemonic)
    (register)
    (integer)))


==============================================================================
deferenced + pointer size
==============================================================================

mov QWORD PTR -8[rbp], rdi
mov rdi, QWORD PTR -8[rbp]

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (pointer
      (integer)
      (register))
    (register))
  (instruction
    (mnemonic)
    (register)
    (pointer
      (integer)
      (register))))
