test/corpus/label.txt
==============================================================================
interleaved labels
==============================================================================

.LFB2206:
thing
_ZSt3sinf:

-----------------------------------------------------------------------------

(program
  (label)
  (instruction
    (mnemonic))
  (label))


==============================================================================
contiguous labels
==============================================================================

.LFB2206:
_ZSt3sinf:

-----------------------------------------------------------------------------

(program
  (label)
  (label))


==============================================================================
prefixed label
==============================================================================

_start: mov rax, 16

-----------------------------------------------------------------------------

(program
  (label)
  (instruction
    (mnemonic)
    (register)
    (integer)))


==============================================================================
complex C++ labels
==============================================================================

operator<<(std::basic_ostream<char, std::char_traits<char> >&, math::matrix3D::Matrix3D const&):
math::matrix3D::operator*(math::matrix3D::Matrix3D const&, math::vector3D::Vector3D const&):

-----------------------------------------------------------------------------

(program
  (label)
  (label))
