test/corpus/nasm_examples.txt
==============================================================================
len command with special characters
==============================================================================

len equ $ - msg         ;length of our dear string

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (identifier)
    (identifier)
    (identifier)
    (identifier))
  (comment))
