test/corpus/pointer.txt
==============================================================================
simple
==============================================================================

mov QWORD PTR [rbp], rdi

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (pointer
      (pointer_width)
      (register))
    (register)))


==============================================================================
offset dereference
==============================================================================

mov QWORD PTR -8[rbp], rdi

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (pointer
      (pointer_width)
      (integer)
      (register))
    (register)))


==============================================================================
right side
==============================================================================

mov rdi, QWORD PTR -8[rbp]

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (register)
    (pointer
      (pointer_width)
      (integer)
      (register))))


==============================================================================
base + index
==============================================================================

mov rdi, QWORD PTR [rbp + 10]

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (register)
    (pointer
      (pointer_width)
      (register)
      (integer))))


==============================================================================
base + index * scale
==============================================================================

mov rdi, QWORD PTR [rbp + 10 * 2]

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (register)
    (pointer
      (pointer_width)
      (register)
      (integer)
      (integer))))


==============================================================================
base + index * scale + displacement
==============================================================================

mov rdi, QWORD PTR [rbp + 10 * 2 + 1]

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (register)
    (pointer
      (pointer_width)
      (register)
      (integer)
      (integer)
      (integer))))
