test/corpus/string.txt
==============================================================================
simple
==============================================================================

db "simple"
.string "simple"

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (string))
  (instruction
    (gcc_directive)
    (string)))


==============================================================================
ASCII
==============================================================================

.string "simkjl;sdfg@#$%_@(-)ple (asdfsdf)"

-----------------------------------------------------------------------------

(program
  (instruction
    (gcc_directive)
    (string)))


==============================================================================
label-like
==============================================================================

foo "GCC: (GNU) 9.3.1 20200408 (Red Hat 9.3.1-2)"

-----------------------------------------------------------------------------

(program
  (instruction
    (mnemonic)
    (string)))


==============================================================================
single quoted string
==============================================================================

text:   db      'OK to rethrow, CANCEL to generate core dump',0

-----------------------------------------------------------------------------

(program
  (label)
  (instruction
    (mnemonic)
    (string)
    (integer)))
